# gcad

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
gcad/: Cargo.toml
gcad/src/: main.rs
libgcad/: Cargo.toml  materials.gcad
libgcad/src/: gcode.rs  grammar.pest  lib.rs  numbers.rs  value.rs
libgcad/src/engine/: builtins.rs  mod.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: gcode.rs  grammar.pest  lib.rs  main.rs  numbers.rs  value.rs
src/engine/: builtins.rs  mod.rs
