[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "A simple CAD/CAM scripting language"
license = "MIT OR Apache-2.0"
name = "gcad"
readme = "README.md"
repository = "https://github.com/fpgaminer/gcad"
version = "0.3.0"
edition = "2021"
documentation = "https://docs.rs/gcad"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
libgcad = { version = "0.2.2" }