[package]
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "A simple CAD/CAM scripting language"
license = "MIT OR Apache-2.0"
name = "libgcad"
readme = "README.md"
repository = "https://github.com/fpgaminer/gcad"
version = "0.3.0"
edition = "2021"
documentation = "https://docs.rs/gcad"

[dependencies]
pest = { version = "2.5.7" }
pest_derive = "2.5.7"
anyhow = { version = "1.0.70", features = ["backtrace"] }
nalgebra = "0.32.2"
gcad_proc_macros = { version = "0.3.0" }
